[package]
name = "druid-prototype"
version = "0.1.0"
authors = ["Justin Moon <mail@justinmoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.6"
druid-enums = { git = "https://github.com/Finnerale/druid-enums.git" }
log = "0.4.11"

